--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     />
 
     <link rel="stylesheet" href="/dist/style.css" />
-    <script defer src="/dist/script.js"></script>
+    <script defer src="https://sksksk2024.github.io/dist/script.js"></script>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <style>
