style css changed too

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="/dist/style.css" />
-    <script defer src="https://sksksk2024.github.io/dist/script.js"></script>
+    <link rel="stylesheet" href="Second-front-end-p/dist/style.css" />
+    <script defer src="Second-front-end-p/dist/script.js"></script>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <style>
