--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               src="./images/icon-facebook.svg"
               alt="Facebook"
             />
-            <div class="card__username">@nathanf</div>
+            <div class="card__username">Alex Coța</div>
           </div>
           <div class="card__followers">
             <div class="card__count card__count--big">1987</div>
@@ -89,7 +89,7 @@
               src="./images/icon-twitter.svg"
               alt="Twitter"
             />
-            <div class="card__username">@nathanf</div>
+            <div class="card__username">@nuAmTwitter</div>
           </div>
           <div class="card__followers">
             <div class="card__count card__count--big">1044</div>
@@ -108,7 +108,7 @@
               src="./images/icon-instagram.svg"
               alt="Instagram"
             />
-            <div class="card__username">@nathanf</div>
+            <div class="card__username">@h1_cota_alexandru_h1</div>
           </div>
           <div class="card__followers">
             <div class="card__count card__count--big">11k</div>
@@ -127,7 +127,7 @@
               src="./images/icon-youtube.svg"
               alt="YouTube"
             />
-            <div class="card__username">@nathanf</div>
+            <div class="card__username">@alextvop2024</div>
           </div>
           <div class="card__followers">
             <div class="card__count card__count--big">8239</div>
